# eo-forge

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/reference/: index.rst  io.rst  utils.rst
eo_forge/: __init__.py
eo_forge/io/: EOLoaders.py  GenLoader.py  LandsatLoaders.py  SentinelLoaders.py  __init__.py
eo_forge/utils/: downloader.py  landsat.py  logger.py  raster_utils.py  sentinel.py  shapes.py  utils.py
examples/: Sentinel2_and_Landsat_loaders_example.ipynb  eo-forge-gcp-downloader.ipynb  eo-forge-loaders-101-Loggers.ipynb  eo-forge-loaders-101.ipynb  eo-forge-loaders-103.ipynb
examples/data/: cardiel-lake-partial-L8.geojson  cardiel-lake-partial-S2.geojson  cardiel-lake.geojson
