[metadata]
name = eo-forge
version = 0.0.2
author = Felix Rojo Lapalma, Andres Perez
description = Python tools for remote sensing data processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EO-Forge/eo-forge.git
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    rasterio
    lxml
    geopandas
    sentinelhub
    shapely
    tqdm
    gsutil
include_package_data = True
