[metadata]
name = eo-forge
version = 0.2.0
author = Felix Rojo Lapalma, Andrés Pérez Hortal
description = Python tools for remote sensing data processing.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EO-Forge/eo-forge.git
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    rasterio
    lxml
    geopandas
    shapely
    tqdm
    gsutil
include_package_data = True
